# cost_analyzer

./: CLAUDE.md  FIXES_APPLIED.md  README.md  TODO.md  TOKEN_FIX_README.md  analyzer.py  analyzer_old.py  check_current_window.py  check_timezone_issue.py  clear_windows.py  debug_windows.py  diagnose_tokens.py  examine_jsonl_structure.py  fix_tokens.py  fix_tokens_auto.py  investigate_dates.py  pyproject.toml  reprocess_tokens.py  show_token_data.py  test_data_validation.py  test_fixes.py  test_performance.py  test_token_extraction.py  test_window_analysis.py  test_window_persistence.py  trace_window_detection.py  verify_tokens.py
cost_analyzer/: __init__.py  dashboard.py  data_processor.py  database.py  main.py  predictions.py  visualizations.py  window_cards.py  window_detector.py
tests/: __init__.py  test_data_processor.py  test_database.py  test_predictions.py  test_visualizations.py
