[project]
name = "cost-analyzer"
version = "0.1.0"
description = "Advanced Claude Code Cost Analytics Dashboard with token tracking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "plotly>=6.0.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
claude-cost-analyzer = "cost_analyzer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
